# NovaLink

./: .gitignore  CMakeLists.txt  README.md
src/: RocketLink.cpp  RocketLink.hpp
src/API/: Callbacks.cpp  Callbacks.hpp
src/AVC/: AVCProtocol.cpp  AVCProtocol.hpp  Command.cpp  Command.hpp  Telemetry.cpp  Telemetry.hpp
src/Diagnostics/: Diagnostics.cpp  Diagnostics.hpp
src/Management/: CommandManager.cpp  CommandManager.hpp  TelemetryBuffer.cpp  TelemetryBuffer.hpp
src/PhysicalLayer/: RFD900.cpp  RFD900.hpp  RadioInterface.cpp  RadioInterface.hpp  XBeePro900HP.cpp  XBeePro900HP.hpp
src/SCALPEL/: COBS.cpp  COBS.hpp  Checksum.cpp  Checksum.hpp  Communicator.cpp  Communicator.hpp  Packet.cpp  Packet.hpp
src/Utils/: Logger.cpp  Logger.hpp  MemoryPool.hpp
tests/: CMakeLists.txt
tests/Benchmarking/: CMakeLists.txt  ManagementBenchmark.cpp  PhysicalLayerBenchmark.cpp  SCALPELBenchmark.cpp  UtilsBenchmark.cpp
tests/IntegrationTests/: CMakeLists.txt
tests/UnitTests/: CMakeLists.txt  TestCOBS.cpp  TestChecksum.cpp  TestCommand.cpp  TestPacket.cpp  TestTelemetry.cpp
